fix(notification): add shadow on mobile

--- a/source/css/_objects.store.scss
+++ b/source/css/_objects.store.scss
@@ -360,9 +360,7 @@
 /// @molecules/store/notification
 .c-store-notification {
   background: $c-white;
-  @include media(">medium") {
-    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.25);
-  }
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.25);
 
   margin-top: $space;
   height: min-content;
